fix styles to make links visible

--- a/static_browser_interface/graph.css
+++ b/static_browser_interface/graph.css
@@ -1,8 +1,13 @@
-.node {
-    stroke: #fff;
+.nodes circle {
+    stroke: #555;
     stroke-width: 1.5px;
 }
-.link {
+.links line {
     stroke: #999;
-    stroke-opacity: 1.6;
+    stroke-opacity: 0.6;
+}
+
+text {
+  font-family: sans-serif;
+  font-size: 10px;
 }
